<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mill_title"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/mill_diam" />

            <Button
                android:id="@+id/btnMillD"
                style="@style/InputFormulaButtonBottom"
                android:onClick="clickBtnMill"

                android:text="20" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/mill_z" />

            <Button
                android:id="@+id/btnMillZ"
                style="@style/InputFormulaButtonBottom"
                android:onClick="clickBtnMill"
                android:text="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/mill_v" />

            <Button
                android:id="@+id/btnMillV"
                style="@style/InputFormulaButtonBottom"
                android:onClick="clickBtnMill"
                android:text="80" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/NameFormulaText"
            android:text="@string/mill_fz" />

        <Button
            android:id="@+id/btnMillFz"
            style="@style/InputFormulaButtonBottom"
            android:onClick="clickBtnMill"
            android:text="0.1" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/mill_n" />

            <Button
                android:id="@+id/btnMillN"
                style="@style/InputFormulaButtonBottom"
                android:onClick="clickBtnMill"
                android:text="1200" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/mill_fm" />

            <Button
                android:id="@+id/btnMillFm"
                style="@style/InputFormulaButtonBottom"
                android:onClick="clickBtnMill"
                android:text="200" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>