<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/drill_title"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/drill_length" />

            <TextView
                android:id="@+id/tvLength"
                style="@style/OutputResultFormulaText"
                android:gravity="center"
                android:text="3,61" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/drill_diam" />

            <Button
                android:id="@+id/btnInputDiam"
                style="@style/InputFormulaButton"
                android:onClick="clickBtnLength"
                android:text="12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/NameFormulaText"
                android:text="@string/drill_angle" />

            <Button
                android:id="@+id/btnInputAngle"
                style="@style/InputFormulaButton"
                android:onClick="clickBtnLength"
                android:text="118°" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>